--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
-      "args": [],
+      "args": ["maps/map_test.cub"],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/home/foxy/projects/cub3d/srcs/game",
-      "program": "/home/foxy/projects/cub3d/srcs/game/build/Debug/outDebug",
+      "cwd": "/Users/ldick/Documents/projects/cub3d",
+      "program": "/Users/ldick/Documents/projects/cub3d/cub3D",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
